# trek

./: .gitignore  AGENTS.md  Cargo.toml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: pr-cleanup-cache.yml  test.yml
crates/parser/: Cargo.toml  README.md
crates/parser-wasm/: Cargo.toml  README.md
crates/parser-wasm/src/: lib.rs
crates/parser/examples/: demo.rs  generate_schema.rs
crates/parser/examples/lua/: full.lua
crates/parser/fuzz/: Cargo.toml
crates/parser/fuzz/fuzz_targets/: fuzz_target_1.rs  json_roundtrip.rs
crates/parser/src/: ast_synth.rs  demo.lua  generator.rs  layout_visitor.rs  lib.rs  linter.rs  lua_gen.rs  models.rs  navigator.rs  session.rs  trivia_parser.rs  visitor.rs
crates/parser/tests/: debug_seed0.rs  e2e_fuzz_tests.rs  fuzz_test.proptest-regressions  fuzz_test.rs  regression_test.rs
crates/trek/: Cargo.toml
crates/trek/src/: cli.rs  config.rs  main.rs
crates/trek/src/server/: mod.rs  proxy.rs  router.rs
npm/trek-wasm-web/: .gitignore  package.json
scripts/: build.ts
xtask/fuzz/: Cargo.toml
xtask/fuzz/src/: main.rs  report.rs
