[package]
name = "parser"
version.workspace = true
edition.workspace = true

[dependencies]
full_moon.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
stylua.workspace = true
rand.workspace = true
schemars = { version = "1.2.1", features = ["indexmap2"] }

[features]
wasm = []
