[package]
name = "parser"
version.workspace = true
edition.workspace = true

[dependencies]
full_moon.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
wasm-bindgen = { version = "0.2", optional = true }
schemars = { version = "1", features = ["indexmap2"], optional = true }

[features]
default = []
wasm = ["wasm-bindgen"]
schema = ["dep:schemars"]

[dev-dependencies]
annotate-snippets = "0.12.16"
proptest = "1"
