[package]
name = "parser"
version.workspace = true
edition.workspace = true

[dependencies]
full_moon.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
schemars = { version = "1", features = ["indexmap2"], optional = true }

[features]
default = []
schema = ["dep:schemars"]

[dev-dependencies]
proptest = "1"
