[package]
name = "trek"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
hyper = { workspace = true, features = ["http1", "server", "client"] }
hyper-util = { workspace = true, features = ["tokio", "client-legacy", "http1"] }
tower-service.workspace = true
utoipa = { workspace = true, optional = true }
utoipa-swagger-ui = { workspace = true, optional = true }
bytes.workspace = true
http-body-util.workspace = true
serde = { workspace = true, features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
inquire = { version = "0.7", default-features = false, features = ["console"] }

[features]
swagger = ["dep:utoipa", "dep:utoipa-swagger-ui"]
