[package]
name = "parser-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"

[dependencies.parser]
path = ".."

[[bin]]
name = "lua_roundtrip"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "json_roundtrip"
path = "fuzz_targets/json_roundtrip.rs"
test = false
doc = false
bench = false
